// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FileShares collaborators list renders sharedWithLabel and sharee list 1`] = `
<div class="oc-position-relative" id="oc-files-sharing-sidebar">
  <div class="oc-flex">
    <h3 class="oc-text-bold oc-text-medium oc-m-rm" data-current-language="en" data-msgid="Share with people">Share with people</h3>
    <oc-contextual-helper-stub class="oc-pl-xs" endtext="" list="[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object]" readmorelink="https://doc.owncloud.com/go?to=webui-users-sharing" text="Use the input field to search for users and groups. Select them to share the item." title="Share with people"></oc-contextual-helper-stub>
  </div>
  <invite-collaborator-form-stub class="oc-my-s" invitelabel="" savebuttonlabel="Share"></invite-collaborator-form-stub>
  <div class="avatars-wrapper oc-flex oc-flex-middle oc-flex-between">
    <h4 class="oc-text-bold oc-my-rm">Shared with</h4>
  </div>
  <portal-target name="app.files.sidebar.sharing.shared-with.top" slot-props="[object Object]"></portal-target>
  <ul aria-label="Share receivers" class="oc-list oc-list-divider oc-overflow-hidden oc-m-rm" id="files-collaborators-list">
    <li>
      <collaborator-list-item-stub deniable="false" issharedenied="false" modifiable="true" resourcename="[Function]" share="[object Object]"></collaborator-list-item-stub>
    </li>
    <li>
      <collaborator-list-item-stub deniable="false" issharedenied="false" modifiable="true" resourcename="[Function]" share="[object Object]"></collaborator-list-item-stub>
    </li>
    <li>
      <collaborator-list-item-stub deniable="false" issharedenied="false" modifiable="true" resourcename="[Function]" share="[object Object]"></collaborator-list-item-stub>
    </li>
    <li>
      <collaborator-list-item-stub deniable="false" issharedenied="false" modifiable="true" resourcename="[Function]" share="[object Object]"></collaborator-list-item-stub>
    </li>
    <portal-target name="app.files.sidebar.sharing.shared-with.bottom" slot-props="[object Object]"></portal-target>
  </ul>
  <div class="oc-flex oc-flex-center">
    <button class="oc-button oc-rounded oc-button-m oc-button-justify-content-center oc-button-gap-m oc-button-passive oc-button-passive-raw toggle-shares-list-btn" type="button">Show less</button>
  </div>
  <!--v-if-->
</div>
`;

exports[`FileShares current space loads space members if a space is given and the current user is member 1`] = `
<div class="oc-position-relative" id="oc-files-sharing-sidebar">
  <div class="oc-flex">
    <h3 class="oc-text-bold oc-text-medium oc-m-rm" data-current-language="en" data-msgid="Share with people">Share with people</h3>
    <oc-contextual-helper-stub class="oc-pl-xs" endtext="" list="[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object]" readmorelink="https://doc.owncloud.com/go?to=webui-users-sharing" text="Use the input field to search for users and groups. Select them to share the item." title="Share with people"></oc-contextual-helper-stub>
  </div>
  <invite-collaborator-form-stub class="oc-my-s" invitelabel="" savebuttonlabel="Share"></invite-collaborator-form-stub>
  <div class="avatars-wrapper oc-flex oc-flex-middle oc-flex-between">
    <h4 class="oc-text-bold oc-my-rm">Shared with</h4>
  </div>
  <portal-target name="app.files.sidebar.sharing.shared-with.top" slot-props="[object Object]"></portal-target>
  <ul aria-label="Share receivers" class="oc-list oc-list-divider oc-overflow-hidden oc-mb-l" id="files-collaborators-list">
    <li>
      <collaborator-list-item-stub deniable="false" issharedenied="false" modifiable="false" resourcename="[Function]" share="[object Object]"></collaborator-list-item-stub>
    </li>
    <portal-target name="app.files.sidebar.sharing.shared-with.bottom" slot-props="[object Object]"></portal-target>
  </ul>
  <!--v-if-->
  <h4 class="oc-text-bold oc-my-s">Space members</h4>
  <ul aria-label="Space members" class="oc-list oc-list-divider oc-overflow-hidden oc-m-rm" id="space-collaborators-list">
    <li>
      <collaborator-list-item-stub deniable="false" issharedenied="false" modifiable="false" resourcename="[Function]" share="[object Object]"></collaborator-list-item-stub>
    </li>
    <li>
      <collaborator-list-item-stub deniable="false" issharedenied="false" modifiable="false" resourcename="[Function]" share="[object Object]"></collaborator-list-item-stub>
    </li>
  </ul>
  <!--v-if-->
</div>
`;
